# Physical-Ai-book

./: .gitignore  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_STATUS_CHECK.md  DEPLOYMENT_TROUBLESHOOTING.md  GITHUB_PAGES_GUIDE.md  README.md  VERCEL_DEPLOYMENT_ISSUE.md  check_index.py  start_qdrant.py  validation-test.js
backend/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  README_HF.md  force_reset_and_index.py  index_documents.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_and_index.py  run_backend.py  run_backend_fixed.py  simple_rag_server.py
backend/docs/: retrieval_api.md
backend/scripts/: performance_test.py
backend/src/: main.py
backend/src/api/: main.py  retrieval_router.py
backend/src/config/: settings.py
backend/src/models/: chunk.py  metadata.py  query.py  response.py  retrieval_result.py  text_chunk.py  vector_embedding.py
backend/src/services/: agent.py  cohere_client_wrapper.py  content_verification_service.py  end_to_end_retrieval_service.py  health_service.py  metadata_validation_service.py  qdrant_client_wrapper.py  rag.py  retrieval.py  retrieval_service.py
backend/src/utils/: content_verification_utils.py  embedding_utils.py  performance_monitor.py
backend/tests/: conftest.py  test_main.py
backend/tests/retrieval_tests/: __init__.py  config.py  test_comprehensive_pipeline.py  test_content_accuracy_validation.py  test_content_verification.py  test_content_verification_integration.py  test_data.py  test_edge_cases.py  test_end_to_end.py  test_error_handling.py  test_health.py  (+9 more)
(+155 files in other folders)
